added the quick sort

--- a/Algorithm/sorting_Algo/index.html
+++ b/Algorithm/sorting_Algo/index.html
@@ -13,9 +13,15 @@
     <button id="Array_input_button" type="button" onclick="Sort();">
       Sort
     </button>
+    <select id="sort_option">
+      <option value="heapsort">HeapSort</option>
+      <option value="quicksort">Quicksort</option>
+    </select>
+    <p id="heapified_array"></p>
+    <p id="sorted_array"></p>
     <canvas width="300" height="300">
       An alternative text describing what your canvas displays.
     </canvas>
-    <script src="./HeapSort.js"></script>
+    <script src="./Sort.js"></script>
   </body>
 </html>
